--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,20 +7,33 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
+    <com.google.android.material.tabs.TabLayout
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true" tools:srcCompat="@tools:sample/avatars"
-            android:id="@+id/fab" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"/>
+            android:layout_width="match_parent"
+            android:id="@+id/tabLayout"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.002"
+            app:tabIndicatorColor="#FFFFFF"
+            app:tabIndicatorHeight="4dp"
+            app:tabBackground="@color/colorPrimary"
+            app:tabMode="fixed"/>
+
+    <androidx.viewpager.widget.ViewPager android:layout_width="404dp"
+                                         android:layout_height="672dp"
+                                         android:layout_marginTop="8dp"
+                                         app:layout_constraintTop_toBottomOf="@+id/tabLayout"
+                                         app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                                         app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                                         android:layout_marginBottom="8dp"
+                                         app:layout_constraintBottom_toBottomOf="parent"
+                                         app:layout_constraintHorizontal_bias="0.49"
+                                         app:layout_constraintVertical_bias="0.0">
+
+    </androidx.viewpager.widget.ViewPager>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
