--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,16 +22,18 @@
             app:tabBackground="@color/colorPrimary"
             app:tabMode="fixed"/>
 
-    <androidx.viewpager.widget.ViewPager android:layout_width="404dp"
-                                         android:layout_height="672dp"
-                                         android:layout_marginTop="8dp"
-                                         app:layout_constraintTop_toBottomOf="@+id/tabLayout"
-                                         app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                                         app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                                         android:layout_marginBottom="8dp"
-                                         app:layout_constraintBottom_toBottomOf="parent"
-                                         app:layout_constraintHorizontal_bias="0.49"
-                                         app:layout_constraintVertical_bias="0.0">
+    <androidx.viewpager.widget.ViewPager
+            android:layout_width="404dp"
+            android:layout_height="672dp"
+            android:layout_marginTop="8dp"
+            android:id="@+id/viewPager"
+            app:layout_constraintTop_toBottomOf="@+id/tabLayout"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.49"
+            app:layout_constraintVertical_bias="0.0">
 
     </androidx.viewpager.widget.ViewPager>
 
