--- a/app/src/main/res/layout/fragment_recyclerview.xml
+++ b/app/src/main/res/layout/fragment_recyclerview.xml
@@ -7,7 +7,7 @@
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/productCategoryRecyclerView"
+            android:id="@+id/recyclerView"
             android:scrollbars="vertical">
     </androidx.recyclerview.widget.RecyclerView>
 
