--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -8,7 +8,7 @@
 
     <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:id="@+id/subcategory_item"
+            android:id="@+id/category_item"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
