--- a/app/src/main/res/layout/fragment_new_product.xml
+++ b/app/src/main/res/layout/fragment_new_product.xml
@@ -7,8 +7,8 @@
         android:layout_height="match_parent">
 
     <ImageView
-            android:layout_width="369dp"
-            android:layout_height="396dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             app:srcCompat="@drawable/ic_placeholder"
             android:id="@+id/productImage"
             android:layout_marginTop="28dp"
@@ -33,15 +33,17 @@
             app:layout_constraintTop_toBottomOf="@+id/cameraButton" android:layout_marginTop="28dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/uploadButton"/>
+            app:layout_constraintBottom_toTopOf="@+id/uploadButton" app:layout_constraintHorizontal_bias="0.507"
+            app:layout_constraintVertical_bias="0.044"/>
     <Button
             android:text="Upload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/uploadButton"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="288dp" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintHorizontal_bias="0.498"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
