--- a/app/src/main/res/layout/fragment_new_product.xml
+++ b/app/src/main/res/layout/fragment_new_product.xml
@@ -26,24 +26,38 @@
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.498"
             android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/productImage"/>
+
+
     <Spinner
-            android:layout_width="194dp"
-            android:layout_height="wrap_content"
+            android:layout_width="297dp"
+            android:layout_height="24dp"
             android:id="@+id/productType"
-            app:layout_constraintTop_toBottomOf="@+id/cameraButton" android:layout_marginTop="28dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/uploadButton" app:layout_constraintHorizontal_bias="0.507"
-            app:layout_constraintVertical_bias="0.044"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/uploadButton"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/productTypeHeader"
+            app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toStartOf="@+id/productTypeHeader"
+            app:layout_constraintHorizontal_bias="0.0"/>
+
     <Button
             android:text="Upload"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/uploadButton"
-            android:layout_marginBottom="288dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="256dp" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.498"/>
+
+    <TextView
+            android:text="Product Type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/productTypeHeader"
+            app:layout_constraintTop_toBottomOf="@+id/cameraButton" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginTop="28dp" app:layout_constraintHorizontal_bias="0.083"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
