--- a/app/src/main/res/layout/seller_item.xml
+++ b/app/src/main/res/layout/seller_item.xml
@@ -35,10 +35,10 @@
                     android:hint="StoreName"
                     android:textAlignment="center"
                     android:textStyle="bold"
-                    android:textSize="18sp" android:layout_marginTop="8dp"
+                    android:textSize="18sp" android:layout_marginTop="16dp"
                     app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
+                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.055"/>
 
             <ImageView
                     android:layout_width="18dp"
@@ -47,7 +47,7 @@
                     android:src="@drawable/ic_store_location"
                     android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/storeName" app:layout_constraintStart_toStartOf="parent"
-                    android:layout_marginStart="8dp"/>
+                    android:layout_marginStart="24dp"/>
 
             <TextView
                     android:layout_width="wrap_content"
@@ -66,8 +66,9 @@
                     android:src="@drawable/ic_store_phone"
                     android:layout_marginTop="8dp"
                     app:layout_constraintTop_toBottomOf="@+id/storeAddrIcon"
-                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
+                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintVertical_bias="0.0"/>
 
             <TextView
                     android:layout_width="wrap_content"
