--- a/app/src/main/res/layout/activity_final.xml
+++ b/app/src/main/res/layout/activity_final.xml
@@ -40,38 +40,24 @@
             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.025"/>
-    <View
-            android:id="@+id/divider1"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/productCost" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
     <TextView
-            android:text="Available Store :"
+            android:text="Product Type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/AvailableStoresHeader"
-            app:layout_constraintTop_toBottomOf="@+id/divider1" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/productTypeHeader"
+            app:layout_constraintTop_toBottomOf="@+id/productCost" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.027" android:layout_marginTop="8dp"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
+            android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.025"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/storeRecyclerView"
-            android:scrollbars="vertical"
-            app:layout_constraintTop_toBottomOf="@+id/AvailableStoresHeader"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.026"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="0.0">
-    </androidx.recyclerview.widget.RecyclerView>
+            android:id="@+id/productType" android:hint="Food"
+            app:layout_constraintTop_toBottomOf="@+id/productTypeHeader" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.023"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.0"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
