--- a/app/src/main/res/layout/fragment_new_product.xml
+++ b/app/src/main/res/layout/fragment_new_product.xml
@@ -58,6 +58,14 @@
             app:layout_constraintTop_toBottomOf="@+id/cameraButton" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginTop="28dp" app:layout_constraintHorizontal_bias="0.083"/>
+    <Button
+            android:text="SpellCheck"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/azureSpellCheck" android:layout_marginEnd="172dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="151dp"
+            app:layout_constraintHorizontal_bias="0.045" android:layout_marginTop="28dp"
+            app:layout_constraintTop_toBottomOf="@+id/uploadButton"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
